# canyon

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  NOTES.md  README.md  REVIEW.md  TODO.md  conanfile.py
.github/workflows/: build-test.yml  release.yml  upload-lib.yml  upload-release.yml
example/: CMakeLists.txt  conanfile.py
example/assets/layouts/: basic.mothui  button.mothui
example/assets/sprites/: mm.flipbook.json
example/src/: example_app.cpp  example_app.h  example_layer.cpp  example_layer.h  example_main.cpp  example_main.h  main.cpp  ui_button.cpp  ui_button.h
include/: application.h  canyon.h  platform_window.h
include/canyon/: canyon.h  canyon_fwd.h
include/canyon/events/: canyon_events.h  event_emitter.h  event_window.h
include/canyon/graphics/: asset_context.h  blend_mode.h  color.h  context.h  font_factory.h  ifont.h  igraphics.h  iimage.h  image_factory.h  image_scale_type.h  itarget.h  itexture.h  surface_context.h  text_alignment.h  texture_address_mode.h  texture_filter.h
include/canyon/layers/: layer.h  layer_stack.h
include/canyon/platform/: application.h  iplatform.h  window.h
include/canyon/utils/: math_utils.h  moth_ui_format.h  rect.h  rect_format.h  rect_serialization.h  ticker.h  vector.h  vector_serialization.h
include/events/: canyon_events.h  event.h  event_dispatch.h  event_emitter.h  event_key.h  event_mouse.h  event_window.h
include/graphics/: blend_mode.h  color.h  context.h  font_factory.h  ifont.h  igraphics.h  igraphics_context.h  iimage.h  iimage_factory.h  image_factory.h  image_scale_type.h  irenderer.h  itarget.h  itexture.h  surface_context.h  text_alignment.h
include/graphics/moth_ui/: moth_font.h  moth_font_factory.h  moth_image.h  moth_image_factory.h  moth_renderer.h  ui_renderer.h  utils.h
include/graphics/sdl/: sdl_context.h  sdl_events.h  sdl_font.h  sdl_font_factory.h  sdl_graphics.h  sdl_image.h  sdl_image_factory.h  sdl_surface_context.h  sdl_texture.h  sdl_ui_renderer.h  sdl_utils.h  sdl_utils.hpp  smart_sdl.h  smart_sdl.hpp
include/graphics/vulkan/: vulkan_buffer.h  vulkan_command_buffer.h  vulkan_context.h  vulkan_events.h  vulkan_fence.h  vulkan_font.h  vulkan_font_cache.h  vulkan_font_factory.h  vulkan_framebuffer.h  vulkan_graphics.h  vulkan_image.h  vulkan_image_factory.h  vulkan_pipeline.h  vulkan_renderpass.h  vulkan_shader.h  vulkan_subimage.h  vulkan_surface_context.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_ui_renderer.h  vulkan_utils.h
include/layers/: layer.h  layer_stack.h
include/moth_graphics/: moth_graphics.h  moth_graphics_fwd.h  version.h.in
include/moth_graphics/events/: canyon_events.h  event_emitter.h  event_window.h  moth_graphics_events.h
include/moth_graphics/graphics/: asset_context.h  blend_mode.h  color.h  context.h  font_factory.h  ifont.h  igraphics.h  iimage.h  image_factory.h  image_scale_type.h  ispritesheet.h  itarget.h  itexture.h  sprite.h  spritesheet.h  spritesheet_factory.h  surface_context.h  text_alignment.h  texture_address_mode.h  texture_factory.h  texture_filter.h
include/moth_graphics/platform/: application.h  imgui_context.h  iplatform.h  window.h
include/moth_graphics/utils/: math_utils.h  moth_ui_format.h  rect.h  rect_format.h  ticker.h  transform.h  vector.h
include/platform/: application.h  iplatform.h  sdl_application.h  vulkan_application.h  window.h
include/platform/glfw/: glfw_app.h  glfw_events.h  glfw_platform.h  glfw_window.h
include/platform/sdl/: sdl_app.h  sdl_events.h  sdl_platform.h  sdl_window.h
include/utils/: conversions.h  rect.h  rect_serialization.h  ticker.h  vector.h  vector_serialization.h
src/: application.cpp  common.h  main.cpp  platform_window.cpp  ui_button.h
src/example/: example.cpp  example.h  example_app.cpp  example_app.h  example_layer.cpp  example_main.cpp  example_main.h  quit_listener.h
src/graphics/: font_factory.cpp  image.cpp  image_factory.cpp  sprite.cpp  spritesheet.cpp  spritesheet_factory.cpp  stb_image.cpp  stb_image_write.cpp  stb_rect_pack.cpp  texture_factory.cpp  utils.h
src/graphics/moth_ui/: moth_flipbook.cpp  moth_flipbook_factory.cpp  moth_font_factory.cpp  moth_image.cpp  moth_image_factory.cpp  moth_renderer.cpp  ui_renderer.cpp
src/graphics/sdl/: SDL_FontCache.c  sdl_asset_context.cpp  sdl_context.cpp  sdl_context.h  sdl_events.cpp  sdl_font.cpp  sdl_font.h  sdl_font_factory.cpp  sdl_graphics.cpp  sdl_graphics.h  sdl_image.cpp  sdl_image_factory.cpp  sdl_surface_context.cpp  sdl_surface_context.h  sdl_target.cpp  sdl_target.h  sdl_texture.cpp  sdl_texture.h  sdl_ui_renderer.cpp  sdl_utils.hpp  smart_sdl.hpp
src/graphics/vulkan/: vulkan_asset_context.cpp  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_context.cpp  vulkan_events.cpp  vulkan_fence.cpp  vulkan_fence.h  vulkan_font.cpp  vulkan_font.h  vulkan_font_cache.cpp  vulkan_font_factory.cpp  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_graphics.cpp  vulkan_graphics.h  vulkan_graphics_frame.cpp  vulkan_graphics_imgui.cpp  vulkan_graphics_pipeline.cpp  vulkan_image.cpp  vulkan_image_factory.cpp  vulkan_managed_context.cpp  vulkan_managed_context.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_renderpass.cpp  vulkan_renderpass.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_subimage.cpp  vulkan_surface_context.cpp  vulkan_surface_context.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_ui_renderer.cpp  vulkan_unique.h
src/layers/: layer.cpp  layer_stack.cpp
src/platform/: application.cpp  sdl_application.cpp  vulkan_application.cpp  window.cpp
src/platform/glfw/: glfw_app.cpp  glfw_events.cpp  glfw_platform.cpp  (+1 more)
src/widgets/: ui_button.h
tests/: CMakeLists.txt  conanfile.py
tests/src/: api_surface_enums.cpp  api_surface_events.cpp  api_surface_graphics.cpp  api_surface_moth_bridge.cpp  api_surface_platform.cpp  api_surface_sprite.cpp  api_surface_umbrella.cpp  main.cpp  sdl_main_stub.cpp  test_event_emitter.cpp  test_sprite.cpp  test_spritesheet.cpp  test_ticker.cpp
(+93 files in other folders)
